--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "bun run index.ts",
+    "dev": "bun run ./src/index.ts",
     "generate": "bun run drizzle-kit generate",
     "migrate": "bun run drizzle-kit migrate",
     "rollback": "bun run drizzle-kit migrate:rollback"
