--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@elysiajs/swagger": "^1.3.1",
     "@types/crypto-js": "^4.2.2",
+    "@types/nodemailer": "^6.4.17",
     "axios": "^1.10.0",
     "crypto-js": "^4.2.0",
     "crypto-ts": "^1.0.2",
@@ -16,6 +17,7 @@
     "drizzle-orm": "^0.44.3",
     "elysia": "^1.3.5",
     "knex": "^3.1.0",
+    "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
     "zod": "^4.0.5"
   },
