--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.3",
     "elysia": "^1.3.5",
+    "elysia-rate-limit": "^4.4.0",
     "knex": "^3.1.0",
     "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
